--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -14,7 +14,7 @@
 }
 
 .footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 180px;
@@ -64,12 +64,16 @@ p {
 }
 
 body {
+  position: relative;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
 
-
+.link {
+  text-decoration: none;
+  color: white;
+}
 
 
 .row {
