--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,65 @@
-<h2>Sign up</h2>
+<div class="container device">
+  <div class="device_frame">
+    <p class="my-4">新規アカウント登録</p>
+      <div class="device_innner">
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+          <!-- ユーザー名入力 -->
+          <div class="field form-row">
+            <div class="col-2 required-b pt-2"></div>
+            <%= f.text_field :name, class: "form-control col-10 px-2", placeholder: "ユーザー名" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          <!-- メールアドレス入力 -->
+          <div class="field form-row">
+            <div class="col-2 required-b pt-2"></div>
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control col-10 px-2", placeholder: "メールアドレス" %>
+          </div>
+
+          <!-- パスワード入力 -->
+          <div class="field form-row">
+            <div class="col-2 required-b pt-2"></div>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %><br />
+            <%= f.password_field :password, autocomplete: "new-password", class:"form-control col-10 px-2", placeholder: "パスワード" %>
+          </div>
+
+          <!-- パスワード確認 -->
+          <div class="field form-row">
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control col-10 px-2", placeholder: "パスワード確認" %>
+          </div>
+
+          <!-- アカウント作成ボタン -->
+          <div class="actions">
+            <%= f.submit "新規アカウント登録", class: "link form-control btn btn-primary my-4" %>
+          </div>
+          <% end %>
+
+          <%= render "devise/shared/links" %>
+      </div> 
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
