--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,8 @@
 
     <header class="header">
       <div class="header-inner">
-        <div class="header-left-nav">
-          <img class="header-logo" src="/assets/logo.png">    
-  
+        <div class="header-left-nav">  
+          <%= link_to image_tag("logo.png"), "/" %>
           <div class="header-serch d-lg-inline-block d-none">
             <input type="text" name="area" id="area" value class="form_control" placeholder="エリア">
           </div>
@@ -29,8 +28,13 @@
 
           <div class="header-right-nav">
             <div class="nav-item">
-              <a class="btn btn-primary my-2 mx-3">ログイン</a>
-              <a class="btn btn-secondary">登録する</a>
+              <div class="btn btn-primary my-2 mx-3">
+                <%= link_to "ログイン", new_user_session_path, class:"link" %> 
+              </div>
+              <div class="btn btn-secondary">
+                <%= link_to "登録する", new_user_registration_path, class:"link" %>
+              </div>
+              
             </div>
           </div>
       </div>
