プロフィール画像

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,6 @@
   </head>
 
   <body>
-
     <header class="header">
       <div class="header-inner">
         <div class="header-left-nav">  
@@ -26,17 +25,24 @@
           </div>
         </div>
 
-          <div class="header-right-nav">
-            <div class="nav-item">
+        <div class="header-right-nav">
+          <div class="nav-item d-sm-inline-block d-none">
+            <% if user_signed_in?%>
+              <%= current_user.name %>   
+            <div class="btn btn-primary my-2 mx-3">
+                <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class:"link" %> 
+            </div>
+          </div>
+             <% else %>
               <div class="btn btn-primary my-2 mx-3">
                 <%= link_to "ログイン", new_user_session_path, class:"link" %> 
               </div>
               <div class="btn btn-secondary">
                 <%= link_to "登録する", new_user_registration_path, class:"link" %>
               </div>
-              
+              <% end %>
             </div>
-          </div>
+        </div>
       </div>
     </header>
 
