--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -104,3 +104,10 @@ body {
   color: #fff;
   font-size: 14px;
 }
+
+.host-icon{
+  width: 55px;
+  height: 55px;
+  object-fit: cover;
+  border-radius: 50px;
+}
