--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,1 +1,48 @@
-<button id ="user_edit"><%= link_to "編集する", edit_user_registration_path %></button>
+<h3>プロフィール</h3>
+<div class="user-view-box">
+
+<div class="update_content">
+  <div class="col-md-6 offset-md-3">
+    <div class="row">
+      <label class="col-md-3" for="name">ユーザー名</label>
+      <div class="col-md-9">
+        <% if @user.image_name.attached? %>
+        <%= image_tag @user.image_name, class: "host-icon" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="update_content">
+  <div class="row">
+    <label class="col-md-3" for="name">ユーザー名</label>
+    <div class="col-md-9">
+      <%= @user.name %>
+    </div>
+  </div>
+</div>
+
+
+<div class="update_content">
+  <div class="row">
+    <label class="col-md-3" for="email">メールアドレス</label>
+    <div class="col-md-9">
+      <%= @user.email %>
+    </div>
+  </div>
+</div>
+
+<div class="update_content">
+  <div class="row">
+    <label class="col-md-3" for="introduction">自己紹介</label>
+    <div class="col-md-9">
+      <%= @user.introduction %>
+    </div>
+  </div>
+</div>
+</div>
+
+
+
+<div class="btn btn-primary"><%= link_to "編集する", edit_user_registration_path, class:"link" %></div>
