--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -19,50 +18,45 @@
           <div class="header-serch d-lg-inline-block d-none">
             <input type="text" name="area" id="area" value class="form_control" placeholder="エリア">
           </div>
-
           <div class="header-serch d-lg-inline-block d-none">
             <input type="area" name="keyword" id="keyword" value class="form_control" placeholder="キーワード">
           </div>
         </div>
 
         <div class="header-right-nav">
-          <div class="nav-item d-sm-inline-block d-none">
-            <% if user_signed_in? %>
-              <%= current_user.name %>  
-            
-              <img class="host-icon" src="/assets/default_icon.jpeg">    
-          </div>
-
           <div class="nav-item">
-            <div class="navbar mx-3 p-1 host-icon nav-trigger">menu</div>
-              <ul class="header-nav-menu">
-                <li>ルーム登録</li>
-                <li>予約ルーム一覧</li>
-                <li>登録済みルーム一覧</li>
-                <li><%= link_to "設定", edit_user_registration_path %>
-                <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class:"link" %></li>
-              </ul>          
-             <% else %>
+            <% if user_signed_in? %>
+              <%= current_user.name %> 
+          </div>
+          <div class="dropdown">
+            <button class="nav-item" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+              <% if current_user.image_name.attached? %>
+                <%= image_tag current_user.image_name, class: "host-icon" %>
+              <% else %>
+                <img class="host-icon" src="/assets/default_icon.jpeg">  
+              <% end %>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <li><a class="dropdown-item" href="#">ルーム登録</a></li>
+              <li><a class="dropdown-item" href="#">予約ルーム一覧</a></li>
+              <li><a class="dropdown-item" href="#">登録済みルーム一覧</a></li>
+              <li><%= link_to "設定", edit_user_registration_path, class:"dropdown-item" %></li>
+              <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class:"dropdown-item" %></li>
+            </ul>
+          </div>
+        </div>
+
+            <% else %>
               <div class="btn btn-primary my-2 mx-3">
                 <%= link_to "ログイン", new_user_session_path, class:"link" %> 
               </div>
               <div class="btn btn-secondary">
                 <%= link_to "登録する", new_user_registration_path, class:"link" %>
               </div>
-              <% end %>
-            </div>
-          </div>
-        </div>
+            <% end %>
       </div>
     </header>
-  <div class="clearfix"></div>
-  <script>
-    $(function() {
-      $('.nav-trigger').click(function() {
-        $('.header-nav-menu').toggle(1500);
-      })
-    });
-  </script>
+
     <%= yield %>
 
     <footer class="footer">
