--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
               <%= current_user.name %> 
           </div>
           <div class="dropdown">
-            <button class="nav-item" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+            <button type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
               <% if current_user.image_name.attached? %>
                 <%= image_tag current_user.image_name, class: "host-icon" %>
               <% else %>
@@ -37,10 +37,10 @@
               <% end %>
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <li><a class="dropdown-item" href="#">ルーム登録</a></li>
+              <li><%= link_to "ルーム登録", new_room_path, class:"dropdown-item" %></li>
               <li><a class="dropdown-item" href="#">予約ルーム一覧</a></li>
-              <li><a class="dropdown-item" href="#">登録済みルーム一覧</a></li>
-              <li><%= link_to "設定", edit_user_registration_path, class:"dropdown-item" %></li>
+              <li><%= link_to "登録済みルーム一覧", rooms_index_path, class:"dropdown-item" %></li>
+              <li><%= link_to "設定", users_profile_path, class:"dropdown-item" %></li>
               <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class:"dropdown-item" %></li>
             </ul>
           </div>
