--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,48 +1,56 @@
 <h3>プロフィール</h3>
 <div class="user-view-box">
 
-<div class="update_content">
-  <div class="col-md-6 offset-md-3">
-    <div class="row">
-      <label class="col-md-3" for="name">ユーザー名</label>
-      <div class="col-md-9">
-        <% if @user.image_name.attached? %>
-        <%= image_tag @user.image_name, class: "host-icon" %>
-        <% end %>
+  <div class="update-content">
+    <div class="col-md-6">
+      <div class="row">
+        <div class="icon-box">
+          <div class="col-md-9">
+            <label class="col-md-3" for="name">プロフィール画像</label>
+            <% if @user.image_name.attached? %>
+              
+              <%= image_tag @user.image_name, class: "host-icon" %>
+              
+            <% else %>
+              <img class="host-icon" src="/assets/default_icon.jpeg">  
+              
+            <% end %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="update_content">
-  <div class="row">
-    <label class="col-md-3" for="name">ユーザー名</label>
-    <div class="col-md-9">
-      <%= @user.name %>
+  <div class="update-content">
+    <div class="row">
+      <label class="col-md-3" for="name">ユーザー名</label>
+      <div class="col-md-9">
+        <%= @user.name %>
+      </div>
     </div>
+  </div>
+
+  <div class="update-content">
+    <div class="row">
+      <label class="col-md-3" for="email">メールアドレス</label>
+      <div class="col-md-9">
+        <%= @user.email %>
+      </div>
+    </div>
+  </div>
+
+  <div class="update-content">
+    <div class="row">
+      <label class="col-md-3" for="introduction">自己紹介</label>
+      <div class="col-md-9">
+        <%= @user.introduction %>
+      </div>
+    </div>
+  </div>
+  <div class="update-content">
+    <div class="btn btn-primary"><%= link_to "編集する", edit_user_registration_path, class:"link" %></div>
   </div>
 </div>
 
 
-<div class="update_content">
-  <div class="row">
-    <label class="col-md-3" for="email">メールアドレス</label>
-    <div class="col-md-9">
-      <%= @user.email %>
-    </div>
-  </div>
-</div>
 
-<div class="update_content">
-  <div class="row">
-    <label class="col-md-3" for="introduction">自己紹介</label>
-    <div class="col-md-9">
-      <%= @user.introduction %>
-    </div>
-  </div>
-</div>
-</div>
-
-
-
-<div class="btn btn-primary"><%= link_to "編集する", edit_user_registration_path, class:"link" %></div>
