room_idの取得に関する質問

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -105,7 +105,7 @@ body {
   color: #fff;
   font-size: 18px;
   text-align: center;
-  padding: 20px 20px;
+ 
 }
 
 .host-icon{
@@ -181,3 +181,7 @@ tr {
   padding: 10px;
 }
 
+.room-image {
+  width: 150px;
+  height: 100px;
+}
