--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
               <li><%= link_to "ルーム登録", new_room_path, class:"dropdown-item" %></li>
-              <li><a class="dropdown-item" href="#">予約ルーム一覧</a></li>
+              <li><%= link_to "予約ルーム一覧", reservations_index_path, class:"dropdown-item" %></li>
               <li><%= link_to "登録済みルーム一覧", rooms_index_path, class:"dropdown-item" %></li>
               <li><%= link_to "設定", users_profile_path, class:"dropdown-item" %></li>
               <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class:"dropdown-item" %></li>
