--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -13,8 +13,8 @@
     <tbody>
       <% @rooms.each do |room| %>
         <tr>
-          <td><%= image_tag room.image_name %></td>
-          <td><%= room.name %></td>
+          <td><%= image_tag room.image_name, class: "room-image" %></td>
+          <td><%= link_to room.name, {controller: 'reservations', action: 'new', id: room.id} %></td>
           <td><%= room.introduction %></td>
           <td><%= room.single_rate %></td>
           <td><%= room.created_at.to_s(:datetime_jp) %></td>
