--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -185,3 +185,44 @@ tr {
   width: 150px;
   height: 100px;
 }
+
+
+/* room情報登録に関するスタイル */
+
+.room-show, .reservations-new {
+  padding: 30px 0;
+}
+
+.room-show-image, .reservations-new-image {
+  width: 100%;
+  object-fit: cover;
+}
+
+.room-show-detile, .reservations-new-detile {
+  display: flex;
+  align-items: center;
+}
+
+.room-show-profile, .reservations-new-profile {
+  padding: 15px;
+}
+
+.room-show-profile-name, .reservations-new-profile-name {
+  font-size: 18px;
+  font-weight: bold;
+  padding: 15px 0;
+}
+
+.room-show-profile-address, .reservations-new-profile-address {
+  font-size: 14px;
+}
+
+.room-show-detile-content, .reservations-new-detile-content {
+  font-size: 16px;
+  line-height: 30px;
+  padding: 30px 10px;
+  border-top: 1px solid #eaedef;
+  border-bottom: 1px solid #eaedef;
+  word-break: break-all;
+}
+
