--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -16,10 +16,10 @@
     <tbody>
       <% @reservations.each do |reservation| %>
         <tr>
-          <td><%= image_tag room.image_name, class: "room-image" %></td>
+          <td><%= image_tag reservation.room.image_name, class: "room-image" %></td>
           <td><%= reservation.room.name %></td>
           <td><%= reservation.room.introduction %></td>
-          <td><%= reservation.total_rate %></td>
+          <td><%= @total_rate %></td>
           <td><%= reservation.start_date %></td>
           <td><%= reservation.end_date %></td>
           <td><%= reservation.created_at.to_s(:datetime_jp) %></td>
