--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,45 +1,42 @@
 <div class="container room-show">
-  <div class="col-md-8">
-    <%= image_tag @room.image_name, class: "room-show-image" %>
-    <div class="room-show-detile">
-      <div class="room-show-detile-icon">
-        <% if @user.image_name.attached? %>
-          <%= image_tag @user.image_name %>
-        <% else %>
-          <img src="/assets/default_icon.jpeg">
-        <% end %>
+  <div class="row">
+    <div class="col-md-8">
+      <%= image_tag @room.image_name, class: "room-show-image" %>
+      <div class="room-show-detile">
+        <div class="room-show-detile-icon">
+          <img class="host-icon", src="/assets/default_icon.jpeg">
+        </div>
+        <div class="room-show-profile">
+          <p class="room-show-profile-name"><%= @room.name %></p>
+          <p class="room-show-profile-address"><%= @room.address %></p>
+        </div>
       </div>
-      <div class="room-show-profile">
-        <p class="room-show-profile-name"><%= @room.name %></p>
-        <p class="room-show-profile-address"><%= @room.address %></p>
-      </div>
+      <p class="room-show-detile-content"><%= @room.introduction %></p>
     </div>
-    <p class="room-show-detile-content"><%= @room.introduction %></p>
-  </div>
 
-  <div class="col-md-4">
-    <div class="room-show-nav">
-      <h5>¥<%= @room.single_rate %>/日</h5>
-      <%= form_with model: @reservation do |f| %>
-    
-      <div class="room-show-date-select">
-        <div>
-          <%= f.label :start_date, "開始日" %>
-          <%= f.date_field :start_date, class: "form-control mb-4", placeholder: "年/月/日" %>
-        </div>
-        <div>
-          <%= f.label :end_date, "終了日" %>
-          <%= f.date_field :end_date, class: "form-control mb-4", placeholder: "年/月/日" %>
-        </div>
-        <div>
-          <%= f.label :number_of_people, "宿泊人数" %>
-          <%= f.number_field :number_of_people, class: "form-control mb-4" %>
-        </div>
-        <%= f.hidden_field :room_id, value: @room.id %>
-        <%= f.hidden_field :room_id, value: @user.id %>
-        <%= f.submit "予約する", class: "btn btn-primary form-control mb-4" %>
+    <div class="col-md-4">
+      <div class="room-show-nav">
+        <h5>¥<%= @room.single_rate %>/日</h5>
+        <%= form_with model: @reservation do |f| %>
+        <div class="room-show-date-select">
+          <div>
+            <%= f.label :start_date, "開始日" %>
+            <%= f.date_field :start_date, class: "form-control mb-4", placeholder: "年/月/日" %>
+          </div>
+          <div>
+            <%= f.label :end_date, "終了日" %>
+            <%= f.date_field :end_date, class: "form-control mb-4", placeholder: "年/月/日" %>
+          </div>
+          <div>
+            <%= f.label :number_of_people, "宿泊人数" %>
+            <%= f.number_field :number_of_people, class: "form-control mb-4" %>
+          </div>
+          <%= f.hidden_field :room_id, value: @room.id %>
+          <%= f.hidden_field :single_rate, value: @room.single_rate %>
+          <%= f.submit "予約する", class: "btn btn-primary form-control mb-4" %>
         <% end %>
-      </div>
+        </div>
+      </div>  
     </div>
   </div>
 </div>
