--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,13 @@
       <div class="row-col-lg-6">
         <div class="form-fream">
           <div class="form-area">
-            <p class="form-area-title mb-4">Potepan Shareでまだ体験したことのない旅をしよう</p>    
+            <p class="form-area-title mb-4">Potepan Shareでまだ体験したことのない旅をしよう</p>
+            <%= search_form_for @q, url: search_rooms_path do |f| %>
+              <%= f.label :address_cont, 'エリア' %>
+              <br>
+              <%= f.search_field :address_cont, placeholder: '東京' %>
+              <%= f.submit '探す', class: "form-control btn-primary mb-4"%>
+            <% end %>
           </div>
         </div>
       </div>
@@ -18,22 +24,22 @@
       <div class="row">
         <div class="panel-item col-lg-3 col-3">
           <span>東京</span>
-          <img class="panel-image" src="/assets/tokyo.jpeg">
+          <%= link_to image_tag("/assets/tokyo.jpeg", class: "panel-image"), search_rooms_path(q:{address_cont: "東京"}) %>
         </div> 
 
         <div class="panel-item col-lg-3 col-3">
           <span>大阪</span>
-          <img class="panel-image" src="/assets/osaka.jpeg">
+          <%= link_to image_tag("/assets/osaka.jpeg", class: "panel-image"), search_rooms_path(q:{address_cont: "大阪"}) %>
         </div> 
     
         <div class="panel-item col-lg-3 col-3">
           <span>京都</span>
-          <img class="panel-image" src="/assets/kyoto.jpeg">
+          <%= link_to image_tag("/assets/kyoto.jpeg", class: "panel-image"), search_rooms_path(q:{address_cont: "京都"}) %>
         </div> 
 
         <div class="panel-item col-lg-3 col-3">
           <span>札幌</span>
-          <img class="panel-image" src="/assets/sapporo.jpeg">
+          <%= link_to image_tag("/assets/sapporo.jpeg", class: "panel-image"), search_rooms_path(q:{address_cont: "札幌"}) %>
         </div> 
       </div>
     </div>
