--- a/app/views/rooms/search.html.erb
+++ b/app/views/rooms/search.html.erb
@@ -1,8 +1,5 @@
 <div class="container-fluid room-posts">
-  <% if flash[:notice] %>
-    <p class = "notice"><%= flash[:notice] %>
-  <% end %>
-  <h4 class="pb-4">登録済みルーム一覧</h4>
+  <h4 class="pb-4">検索結果:<%= @results.count %>件</h4>
   <table>
     <thead>
       <tr align="center">
@@ -14,7 +11,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @rooms.each do |room| %>
+      <% @results.each do |room| %>
         <tr>
           <td><%= image_tag room.image_name, class: "room-image" %></td>
           <td><%= link_to room.name, {controller: 'reservations', action: 'new', id: room.id} %></td>
@@ -26,5 +23,3 @@
     </tbody>
   </table>
 </div>
-
-
