--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -5,7 +5,11 @@
       <%= image_tag @room.image_name, class: "room-show-image" %>
       <div class="room-show-detile">
         <div class="room-show-detile-icon">
-          <img class="host-icon", src="/assets/default_icon.jpeg">
+        <% if @user_id.image_name.attached? %>
+          <%= image_tag @user_id.image_name, class: "host-icon" %>
+        <% else %>
+          <img class="host-icon" src="/assets/default_icon.jpeg">  
+        <% end %>
         </div>
         <div class="room-show-profile">
           <p class="room-show-profile-name"><%= @room.name %></p>
@@ -34,6 +38,7 @@
           </div>
           <%= f.hidden_field :room_id, value: @room.id %>
           <%= f.hidden_field :single_rate, value: @room.single_rate %>
+          <%= f.hidden_field :image_name, value: @room.image_name %>
           <%= f.submit "予約する", class: "btn btn-primary form-control mb-4" %>
         <% end %>
         </div>
