課題の提出2回目バリデーションとプロフィールアイコン表示の修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
             <% end %>
       </div>
     </header>
-
+    <p class="notice"><%= notice %>
     <%= yield %>
 
     <footer class="footer">
