--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -5,11 +5,11 @@
       <%= image_tag @room.image_name, class: "room-show-image" %>
       <div class="room-show-detile">
         <div class="room-show-detile-icon">
-        <% if @user_id.image_name.attached? %>
-          <%= image_tag @user_id.image_name, class: "host-icon" %>
-        <% else %>
-          <img class="host-icon" src="/assets/default_icon.jpeg">  
-        <% end %>
+          <% if current_user.image_name.attached? %>
+            <%= image_tag @user.image_name, class: "host-icon" %>
+          <% else %>
+            <img class="host-icon" src="/assets/default_icon.jpeg">  
+          <% end %>
         </div>
         <div class="room-show-profile">
           <p class="room-show-profile-name"><%= @room.name %></p>
@@ -38,7 +38,7 @@
           </div>
           <%= f.hidden_field :room_id, value: @room.id %>
           <%= f.hidden_field :single_rate, value: @room.single_rate %>
-          <%= f.hidden_field :image_name, value: @room.image_name %>
+          <%= f.hidden_field :user_id, value: @user.id %>
           <%= f.submit "予約する", class: "btn btn-primary form-control mb-4" %>
         <% end %>
         </div>
